# bounded-static-derive-more

./: Cargo.toml  README.md
src/: common.rs  data_struct.rs  lib.rs
tests/: integration_tests.rs
