[package]
name = "bounded-static-derive-more"
description = "Macro to derive ToBoundedStatic and IntoBoundedStatic traits"
readme = "README.md"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
keywords = ["cow", "static", "bounded", "owned", "derive"]
categories = ["no-std", "rust-patterns", "data-structures", "memory-management"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full"] }

[dev-dependencies]
chrono = "0.4"
bounded-static = "0.8"
serde_json = "1"
